<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TBD Stairs</string>
    <string name="app_name_long">Java Floor Plan Reconstruction Example</string>
    <string name="exception_tango_error">"Tango exception! Try again!"</string>
    <string name="exception_tango_invalid">"Tango invalid exception! Try again!"</string>
    <string name="exception_out_of_date">"Tango service outdated!"</string>
    <string name="exception_tango_permission">"Tango.PERMISSIONTYPE_DATASET required!"</string>
    <string name="pause">Pause</string>
    <string name="clear">Clear</string>
    <string name="first_floor">First Floor</string>
    <string name="second_floor">Second Floor</string>
    <string name="third_floor">Third Floor</string>
    <string name="fourth_floor">Fourth Floor</string>
    <string name="title_activity_navigation">Navigation Activity</string>
    <string name="instruction_main">Choose your initial location and destination</string>
    <string name="instruction_navigation">Follow the instructions!</string>
    <string name="init">Tango Initiating!</string>
</resources>
