<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/instruction_main"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onFirstFloorClicked"
        android:text="@string/first_floor" />

    <Button
        android:id="@+id/btn_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onSecondFloorClicked"
        android:text="@string/second_floor" />

    <Button
        android:id="@+id/btn_scrollview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onThirdFloorClicked"
        android:text="@string/third_floor" />

    <Button
        android:id="@+id/btn_listview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onFourthFloorClicked"
        android:text="@string/fourth_floor" />

    <Button
        android:id="@+id/speechBtn"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:onClick="onSpeechButtonClicked"
        android:text="Speech" />

</LinearLayout>